# rusk

./: .gitignore  AGENTS.md  BYTECODE_SPEC.md  Cargo.toml  DYN_DISPATCH_PLAN.md  GENERIC_REWORK_PLAN.md  MIR_SPEC.md  README.md  README.zh.md  RUSK_SPEC.md  TODO.md  rust_pat_test
benchmarks/: README.md  compare.py  phase1_var_loop.py  phase1_var_loop.rusk  phase2_object_access.py  phase2_object_access.rusk  phase3_closure_capture.py  phase3_closure_capture.rusk  phase4_call_dispatch.py  phase4_call_dispatch.rusk  phase5_gc_epoch.py  phase5_gc_epoch.rusk  phase6_effects_generator.py  phase6_effects_generator.rusk  phase7_map_dict.py  phase7_map_dict.rusk  py_measure.py  results.json  results.md
completed-proposals/: 008-rusk-host.md  010-optimization.md  011-destructuring-let.md  013-bytecode-ffi.md  014-bytecode-ffi-plan.md  016-vm-gc.md  017-peephole-opt.md  018-effect-opt.md  019-self-type.md  020-assoc-type.md  021-basic-interfaces.md  022-char-byte-slicing.md  023-escape-analysis.md  024-core-sysroot.md  025-core-pub-interface.md  026-never-type.md  029-allow-multiple-outstanding-continuations.md  030-serde.md  031-rusk-lsp.md  032-ergonomic-api.md  033-tooling.md  034-async.md  034-complex-abi-type.md  035-generic-abi-types.md  036-serde-fix.md
completed_proposals/: 003-omit-unit.md  004-IS_AS.md  006-generic-rework-fix.md  007-implicit-receiver.md  DYN_DISPATCH.md  generic-rework.md
crates/rusk-compiler/: Cargo.toml
crates/rusk-compiler/src/: analysis.rs  ast.rs  bytecode_lower.rs  capture_analysis_tests.rs  compiler.rs  derive_expand.rs  host.rs  inliner_tests.rs  lexer.rs  lib.rs  mir_opt.rs  modules.rs  parser.rs  source.rs  source_map.rs  typeck.rs  vfs.rs
crates/rusk-compiler/src/compiler/: lower.rs
crates/rusk-compiler/src/tooling/: diagnostics.rs  formatter.rs  linter.rs  mod.rs
crates/rusk-compiler/src/typeck/: typecheck.rs
crates/rusk-host/: Cargo.toml
crates/rusk-host/src/: lib.rs  std_async.rs  std_io.rs
crates/rusk-interpreter/: Cargo.toml
crates/rusk-interpreter/src/: corelib.rs  gc.rs  interpreter.rs  lib.rs
crates/rusk-lsp/: Cargo.toml
crates/rusk-lsp/src/: config.rs  lib.rs  main.rs  server.rs  text.rs
crates/rusk-lsp/tests/: protocol.rs
docs/: about-rusk.md  about-rusk.zh.md  delimited-continuations-and-scoped-effects.md  delimited-continuations-and-scoped-effects.zh.md  embedding-vm.md  embedding-vm.zh.md  rusk-lsp.md  rusk-lsp.zh.md  tco-with-effects-example.zh.md
examples/: 01-hello-world.rusk  02-values-and-functions.rusk  03-control-flow-if-match.rusk  04-arrays-and-for-loops.rusk  05-strings-and-fmt.rusk  06-structs-and-methods.rusk  07-enums-and-patterns.rusk  08-closures-and-functions-as-values.rusk  08-destructuring-patterns.rusk  09-closures-and-functions-as-values.rusk  09-generics.rusk  10-generics.rusk  11-interfaces-and-dynamic-dispatch.rusk  12-effects-basic.rusk  12-interfaces-and-dynamic-dispatch.rusk  13-associated-types.rusk  13-effects-typed.rusk  14-type-tests-is-asq.rusk  15-effects-generator.rusk  15-newtype-structs.rusk  16-core-map.rusk  16-fixed-point-combinator.rusk  17-byte-char-slicing.rusk  17-effects-state-management.rusk  18-newtype-structs.rusk  18-option-methods.rusk  19-destructuring-patterns.rusk  19-fixed-point-combinator.rusk  20-associated-types.rusk  20-effects-basic.rusk  21-byte-char-slicing.rusk  21-effects-typed.rusk  22-effects-generator.rusk  22-option-methods.rusk  23-effects-state-management.rusk  23-host-stored-continuations.rusk  24-result-try-throw.rusk  25-host-stored-continuations.rusk  26-std-json-serde.rusk  README.md  (+1 more)
extra/rusk-vm-browser/: .gitignore  Cargo.toml  README.md  build.rs  package.json
extra/rusk-vm-browser/examples/: README.md  build_examples.rs
extra/rusk-vm-browser/examples/basic-run/: index.html  main.js  program.rusk
extra/rusk-vm-browser/examples/continuations/: index.html  main.js  program.rusk
extra/rusk-vm-browser/examples/counter/: index.html  main.js  program.rusk
extra/rusk-vm-browser/examples/host-imports/: index.html  main.js  program.rusk
extra/rusk-vm-browser/js/: driver.js
extra/rusk-vm-browser/src/: lib.rs
extra/rusk-vm-browser/tests/: wasm_api.rs
fixtures/: 001_smoke_unit.rusk  002_shebang_smoke.rusk  010_int_math.rusk  011_float_cmp.rusk  012_equality.rusk  020_arrays_get_set.rusk  021_array_oob_runtime_error.rusk  022_readonly_array_index_set_compile_error.rusk  023_array_len_intrinsics.rusk  024_array_push_pop_intrinsics.rusk  025_array_concat_slice_intrinsics.rusk  026_array_resize_insert_remove_intrinsics.rusk  027_array_extend_intrinsics.rusk  028_readonly_array_push_compile_error.rusk  029_array_slice_oob_runtime_error.rusk  030_struct_methods_interfaces.rusk  031_ambiguous_method_call_compile_error.rusk  040_closures_capture.rusk  041_function_values.rusk  042_generics_inference_string.rusk  043_generic_fn_as_value_compile_error.rusk  050_uninitialized_local_trap.rusk  051_readonly_field_assignment_compile_error.rusk  060_effects_resume_sum.rusk  061_effect_no_resume_result.rusk  062_unhandled_effect_outside_match_runtime_error.rusk  (+227 more)
src/: gc.rs  (+14 more)
(+288 files in other folders)
