[workspace]
package.version = "0.1.0"
package.edition = "2024"
members = [
    "crates/rusk-mir",
    "crates/rusk-compiler",
    "crates/rusk-interpreter",
    "crates/rusk-host",
    "crates/rusk-bytecode",
    "crates/rusk-vm",
]

[package]
name = "rusk"
version.workspace = true
edition.workspace = true

[dependencies]
rusk-compiler = { path = "crates/rusk-compiler" }
rusk-interpreter = { path = "crates/rusk-interpreter" }
rusk-host = { path = "crates/rusk-host" }

[dev-dependencies]
rusk-mir = { path = "crates/rusk-mir" }
rusk-vm = { path = "crates/rusk-vm" }
rusk-bytecode = { path = "crates/rusk-bytecode" }
