[package]
name = "rusk-host"
version.workspace = true
edition.workspace = true

[dependencies]
rusk-compiler = { path = "../rusk-compiler" }
rusk-bytecode = { path = "../rusk-bytecode" }
rusk-vm = { path = "../rusk-vm" }
tokio = { version = "1", features = ["rt", "time", "sync"] }
reqwest = { version = "0.12", optional = true }

[features]
http = ["dep:reqwest"]
