[package]
name = "rusk-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
rusk-mir = { path = "../rusk-mir", default-features = false }
hashbrown = { version = "0.16", default-features = false,  features = ["alloc", "default-hasher"], optional = true }

[features]
default = ["rusk-mir/std"]
no_std = ["hashbrown"]