[package]
name = "rusk-interpreter"
version.workspace = true
edition.workspace = true


[dependencies]
rusk-mir = { path = "../rusk-mir", default-features = false }
hashbrown = { version = "0.16", default-features = false, features = [
    "inline-more",
    "alloc",
    "default-hasher",
], optional = true }
bitcode = { version = "0.6", default-features = false, optional = true, features = [
] }
serde = { version = "1", default-features = false, optional = true, features = [
    "derive",
    "alloc",
] }

[features]
default = ["std", "serde"]

std = ["serde?/std", "bitcode?/std", "rusk-mir/std"]

# Enable serde support, can be used in both std and no-std builds.
serde = ["dep:serde", "dep:bitcode", "bitcode/serde", "rusk-mir/serde"]

# Must be enabled when `std` is disabled.
hashbrown = ["dep:hashbrown"]
