[package]
name = "rusk-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
rusk-compiler = { path = "../rusk-compiler" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-ident = "1"

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
tower = "0.4"
